tests/NormalTests/paczka1/fuzzy1/16005008.err
Error in line 1: lKk91qT S393 45,9
Error in line 5: fnP S983 8,9
Error in line 6: lKk91qT S575 97,4
Error in line 13: QirnLsk2o S393 47,2
Error in line 18: QirnLsk2o S444 43,0
Error in line 23: 9GbP S575 23,50
Error in line 19: 9GbP S444 76,0
